fixed trade codec